--- a/public/media.html
+++ b/public/media.html
@@ -1,246 +1,405 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>S0LACE • Media</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>S0LACE • Media</title>
 
-  <link rel="shortcut icon" content="favicon.ico" />
-  <link rel="stylesheet" href="index.css" />
-  <script src="global-hub.js" defer></script>
+    <link rel="shortcut icon" content="favicon.ico" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="global-hub.js" defer></script>
+  </head>
 
-  <style>
-    /* TAB BAR */
-    .media-tabs {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 15px;
-    }
-    .media-tab {
-      cursor: pointer;
-      padding: 6px 14px;
-      border-radius: 6px;
-      font-weight: 600;
-      background: #111;
-      border: 1px solid #333;
-      color: #aaa;
-      transition: 0.2s;
-    }
-    .media-tab.active {
-      background: #fff;
-      color: #000;
-    }
+  <body>
+    <header class="site-header">
+      <div class="site-title">S0LACE</div>
+      <nav class="site-nav">
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="media.html" class="active">Media</a>
+        <a href="apps.html">Apps</a>
+        <a href="settings.html">Settings</a>
+      </nav>
+    </header>
 
-    /* HORIZONTAL SEARCH */
-    .media-search-wrap {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      width: 100%;
-      margin: 10px 0 20px;
-    }
-    #media-search {
-      flex: 1;
-      padding: 10px 14px;
-      border-radius: 6px;
-      border: 1px solid #333;
-      background: #0b0b0b;
-      color: white;
-    }
-  </style>
-</head>
+    <main>
+      <div class="page-header">
+        <h1>Media</h1>
+        <div class="sub">
+          <span>Auto-updating</span> TMDB-powered browser. Trending by default —
+          search for any movie or show below.
+        </div>
+      </div>
 
-<body>
-<header class="site-header">
-  <div class="site-title">S0LACE</div>
-  <nav class="site-nav">
-    <a href="index.html">Home</a>
-    <a href="games.html">Games</a>
-    <a href="media.html" class="active">Media</a>
-    <a href="apps.html">Apps</a>
-    <a href="settings.html">Settings</a>
-  </nav>
-</header>
+      <!-- SEARCH BAR (HORIZONTAL) -->
+      <div class="games-search-wrap">
+        <span class="search-label">SEARCH &gt;</span>
+        <input
+          id="media-search"
+          type="text"
+          placeholder="type a title and press Enter..."
+          autocomplete="off"
+        />
+      </div>
 
-<main>
-  <div class="page-header">
-    <h1>Media</h1>
-    <div class="sub">TMDB-powered movies + TV browser.</div>
-  </div>
+      <!-- STATUS LINES -->
+      <div
+        id="tmdb-status-movies"
+        style="font-size: 9px; color: #7f7f7f; margin: 4px 0 6px;"
+      >
+        Loading popular movies from TMDB…
+      </div>
 
-  <!-- TABS -->
-  <div class="media-tabs">
-    <div class="media-tab active" id="tab-movies">MOVIES</div>
-    <div class="media-tab" id="tab-tv">TV SHOWS</div>
-  </div>
+      <!-- MOVIES SECTION -->
+      <section class="media-section">
+        <div class="sub" style="margin-bottom: 6px;">
+          <span>Movies</span> — trending first, or search for anything.
+        </div>
+        <div class="media-grid" id="movies-grid"></div>
+        <div
+          id="media-empty-movies"
+          style="display:none; font-size: 8px; color:#7f7f7f; margin-top:8px;"
+        >
+          No movies found.
+        </div>
+      </section>
 
-  <!-- SEARCH INPUT -->
-  <div class="media-search-wrap">
-    <input id="media-search" type="text" placeholder="search and press Enter..." autocomplete="off" />
-  </div>
+      <hr style="border:0; border-top:1px solid #222; margin: 20px 0;" />
 
-  <!-- STATUS -->
-  <div id="tmdb-status" style="font-size: 9px; color:#7f7f7f;">Loading…</div>
+      <div
+        id="tmdb-status-tv"
+        style="font-size: 9px; color: #7f7f7f; margin: 4px 0 6px;"
+      >
+        Loading popular TV shows from TMDB…
+      </div>
 
-  <div class="media-grid" id="media-grid"></div>
-  <div id="media-empty" style="display:none;">No results.</div>
-</main>
+      <!-- TV SECTION -->
+      <section class="media-section">
+        <div class="sub" style="margin-bottom: 6px;">
+          <span>TV Shows</span> — trending first, or search for any series.
+        </div>
+        <div class="media-grid" id="tv-grid"></div>
+        <div
+          id="media-empty-tv"
+          style="display:none; font-size: 8px; color:#7f7f7f; margin-top:8px;"
+        >
+          No TV shows found.
+        </div>
+      </section>
+    </main>
 
-<script>
-  // ========= CONFIG =========
-  const TMDB_KEY = "2d1351cf74f73892042699d0431b799a";
-  const IMG_BASE = "https://image.tmdb.org/t/p/";
-  const IMG_SIZE = "w600_and_h900_face";
+    <script>
+      // ===== TMDB CONFIG =====
+      const TMDB_KEY = "2d1351cf74f73892042699d0431b799a";
+      const TMDB_IMG_BASE = "https://image.tmdb.org/t/p/";
+      const TMDB_IMG_SIZE = "w600_and_h900_face"; // single size
 
-  // ========= ELEMENTS =========
-  const grid = document.getElementById("media-grid");
-  const statusEl = document.getElementById("tmdb-status");
-  const emptyEl = document.getElementById("media-empty");
-  const searchInput = document.getElementById("media-search");
+      const mediaSearch = document.getElementById("media-search");
 
-  const tabMovies = document.getElementById("tab-movies");
-  const tabTV = document.getElementById("tab-tv");
+      const moviesGrid = document.getElementById("movies-grid");
+      const moviesEmpty = document.getElementById("media-empty-movies");
+      const statusMovies = document.getElementById("tmdb-status-movies");
 
-  let mode = "movie"; // "movie" OR "tv"
+      const tvGrid = document.getElementById("tv-grid");
+      const tvEmpty = document.getElementById("media-empty-tv");
+      const statusTv = document.getElementById("tmdb-status-tv");
 
-  // ========= UI HELPERS =========
-  function setMode(newMode) {
-    mode = newMode;
+      // ===== NAV HELPERS =====
 
-    tabMovies.classList.toggle("active", mode === "movie");
-    tabTV.classList.toggle("active", mode === "tv");
+      // Movies -> existing mediaplayer.html, using CinemaOS movies
+      function goToMoviePlayer(tmdbId, title) {
+        if (!tmdbId) return;
+        const src =
+          "/scram/https://cinemaos.tech/player/" + encodeURIComponent(tmdbId);
 
-    searchInput.value = "";
-    loadTrending();
-  }
+        const url =
+          "mediaplayer.html?src=" +
+          encodeURIComponent(src) +
+          "&title=" +
+          encodeURIComponent(title || "Untitled");
+        window.location.href = url;
+      }
 
-  function clearCards() {
-    document.querySelectorAll(".tmdb-card").forEach(e => e.remove());
-  }
+      // TV -> tvplayer.html, season/episode handled there
+      function goToTvPlayer(tmdbId, title, season, episode) {
+        if (!tmdbId) return;
+        const url =
+          "tvplayer.html?id=" +
+          encodeURIComponent(tmdbId) +
+          "&title=" +
+          encodeURIComponent(title || "Untitled") +
+          "&season=" +
+          encodeURIComponent(season) +
+          "&episode=" +
+          encodeURIComponent(episode);
+        window.location.href = url;
+      }
 
-  function showEmpty(show) {
-    emptyEl.style.display = show ? "block" : "none";
-  }
+      // ===== CARD BUILDERS =====
 
-  // ========= CARD BUILDER =========
-  function createCard(item) {
-    const id = item.id;
-    const title = item.title || item.name;
-    const poster = item.poster_path;
+      function createPosterImg(posterPath, title) {
+        const img = document.createElement("img");
+        img.alt = title;
+        if (posterPath) {
+          img.src = TMDB_IMG_BASE + TMDB_IMG_SIZE + posterPath;
+        } else {
+          img.src = "thumbs/placeholder-poster.png";
+        }
+        return img;
+      }
 
-    const card = document.createElement("a");
-    card.className = "media-card tmdb-card";
-    card.href = "#";
-    card.dataset.title = title;
-    card.dataset.tmdbId = id;
-    card.dataset.type = mode;
+      function createMovieCard(movie) {
+        const id = movie.id;
+        const title = movie.title || movie.name || "Untitled";
+        const posterPath = movie.poster_path;
 
-    const thumb = document.createElement("div");
-    thumb.className = "poster-thumb";
+        const a = document.createElement("a");
+        a.className = "media-card tmdb-card movie-card";
+        a.href = "#";
+        a.dataset.tmdbId = id;
+        a.dataset.title = title;
 
-    const img = document.createElement("img");
-    img.alt = title;
-    img.src = poster ? IMG_BASE + IMG_SIZE + poster : "thumbs/placeholder-poster.png";
+        const thumb = document.createElement("div");
+        thumb.className = "poster-thumb";
 
-    const overlay = document.createElement("div");
-    overlay.className = "media-overlay";
-    overlay.textContent = title;
+        const img = createPosterImg(posterPath, title);
 
-    thumb.appendChild(img);
-    thumb.appendChild(overlay);
-    card.appendChild(thumb);
+        const overlay = document.createElement("div");
+        overlay.className = "media-overlay";
+        overlay.textContent = title;
 
-    // Movie: /player/id
-    // TV: /tv/{id}/{season}/{episode} → handled later
-    card.addEventListener("click", (e) => {
-      e.preventDefault();
+        thumb.appendChild(img);
+        thumb.appendChild(overlay);
+        a.appendChild(thumb);
 
-      const type = card.dataset.type;
-      const id = card.dataset.tmdbId;
-      const title = card.dataset.title;
+        a.addEventListener("click", (e) => {
+          e.preventDefault();
+          goToMoviePlayer(id, title);
+        });
 
-      const url =
-        "mediaplayer.html?type=" + type +
-        "&id=" + encodeURIComponent(id) +
-        "&title=" + encodeURIComponent(title);
+        return a;
+      }
 
-      window.location.href = url;
-    });
+      function createTvCard(show) {
+        const id = show.id;
+        const title = show.name || show.original_name || "Untitled";
+        const posterPath = show.poster_path;
 
-    return card;
-  }
+        const a = document.createElement("a");
+        a.className = "media-card tmdb-card tv-card";
+        a.href = "#";
+        a.dataset.tmdbId = id;
+        a.dataset.title = title;
 
-  // ========= TMDB LOADERS =========
-  async function loadTrending() {
-    statusEl.textContent = "Loading trending " + mode + "…";
-    clearCards();
-    showEmpty(false);
+        const thumb = document.createElement("div");
+        thumb.className = "poster-thumb";
 
-    const endpoint =
-      mode === "movie"
-        ? "trending/movie/day"
-        : "trending/tv/day";
+        const img = createPosterImg(posterPath, title);
 
-    const res = await fetch(`https://api.themoviedb.org/3/${endpoint}?api_key=${TMDB_KEY}&language=en-US`);
-    const data = await res.json();
+        const overlay = document.createElement("div");
+        overlay.className = "media-overlay";
+        overlay.textContent = title;
 
-    const results = data.results || [];
-    if (!results.length) {
-      statusEl.textContent = "No trending found.";
-      return;
-    }
+        thumb.appendChild(img);
+        thumb.appendChild(overlay);
+        a.appendChild(thumb);
 
-    const frag = document.createDocumentFragment();
-    results.slice(0, 24).forEach(item => frag.appendChild(createCard(item)));
-    grid.prepend(frag);
+        a.addEventListener("click", (e) => {
+          e.preventDefault();
+          // default S1E1
+          goToTvPlayer(id, title, 1, 1);
+        });
 
-    statusEl.textContent = "Trending " + (mode === "movie" ? "movies" : "TV shows");
-  }
+        return a;
+      }
 
-  async function searchTMDB(q) {
-    if (!q.trim()) return loadTrending();
+      // ===== CLEAR HELPERS =====
 
-    statusEl.textContent = `Searching "${q}"…`;
-    clearCards();
-    showEmpty(false);
+      function clearTmdbCardsInGrid(gridEl, className) {
+        if (!gridEl) return;
+        gridEl
+          .querySelectorAll("." + className)
+          .forEach((el) => el.remove());
+      }
 
-    const endpoint =
-      mode === "movie"
-        ? "search/movie"
-        : "search/tv";
+      // ===== TRENDING LOADERS =====
 
-    const res = await fetch(
-      `https://api.themoviedb.org/3/${endpoint}?api_key=${TMDB_KEY}&language=en-US&query=${encodeURIComponent(q)}`
-    );
+      async function loadTrendingMovies() {
+        if (!statusMovies) return;
+        statusMovies.textContent = "Loading trending movies…";
 
-    const data = await res.json();
-    const results = data.results || [];
+        try {
+          const res = await fetch(
+            `https://api.themoviedb.org/3/trending/movie/day?api_key=${TMDB_KEY}&language=en-US`
+          );
+          if (!res.ok) throw new Error("TMDB HTTP " + res.status);
 
-    if (!results.length) {
-      showEmpty(true);
-      statusEl.textContent = `No results for "${q}".`;
-      return;
-    }
+          const data = await res.json();
+          const results = data.results || [];
 
-    const frag = document.createDocumentFragment();
-    results.slice(0, 40).forEach(item => frag.appendChild(createCard(item)));
-    grid.prepend(frag);
+          clearTmdbCardsInGrid(moviesGrid, "movie-card");
+          if (moviesEmpty) moviesEmpty.style.display = "none";
 
-    statusEl.textContent = `Results for "${q}"`;
-  }
+          if (!results.length) {
+            statusMovies.textContent = "No trending movies found.";
+            return;
+          }
 
-  // ========= INIT =========
-  document.addEventListener("DOMContentLoaded", () => {
-    loadTrending();
+          const fragment = document.createDocumentFragment();
+          results.slice(0, 24).forEach((m) => {
+            fragment.appendChild(createMovieCard(m));
+          });
 
-    tabMovies.onclick = () => setMode("movie");
-    tabTV.onclick = () => setMode("tv");
+          moviesGrid.appendChild(fragment);
+          statusMovies.textContent = "Trending movies from TMDB.";
+        } catch (err) {
+          console.error(err);
+          statusMovies.textContent = "TMDB movie error: " + err.message;
+        }
+      }
 
-    searchInput.addEventListener("keyup", (e) => {
-      if (e.key === "Enter") searchTMDB(searchInput.value);
-    });
-  });
-</script>
+      async function loadTrendingTv() {
+        if (!statusTv) return;
+        statusTv.textContent = "Loading trending TV shows…";
 
-</body>
+        try {
+          const res = await fetch(
+            `https://api.themoviedb.org/3/trending/tv/day?api_key=${TMDB_KEY}&language=en-US`
+          );
+          if (!res.ok) throw new Error("TMDB HTTP " + res.status);
+
+          const data = await res.json();
+          const results = data.results || [];
+
+          clearTmdbCardsInGrid(tvGrid, "tv-card");
+          if (tvEmpty) tvEmpty.style.display = "none";
+
+          if (!results.length) {
+            statusTv.textContent = "No trending TV shows found.";
+            return;
+          }
+
+          const fragment = document.createDocumentFragment();
+          results.slice(0, 24).forEach((s) => {
+            fragment.appendChild(createTvCard(s));
+          });
+
+          tvGrid.appendChild(fragment);
+          statusTv.textContent = "Trending TV shows from TMDB.";
+        } catch (err) {
+          console.error(err);
+          statusTv.textContent = "TMDB TV error: " + err.message;
+        }
+      }
+
+      // ===== SEARCH =====
+
+      async function searchMovies(query) {
+        const q = query.trim();
+        if (!q) {
+          await loadTrendingMovies();
+          return;
+        }
+
+        if (statusMovies) statusMovies.textContent = `Searching movies for "${q}"…`;
+
+        try {
+          const res = await fetch(
+            `https://api.themoviedb.org/3/search/movie?api_key=${TMDB_KEY}&language=en-US&include_adult=false&page=1&query=${encodeURIComponent(
+              q
+            )}`
+          );
+          if (!res.ok) throw new Error("TMDB HTTP " + res.status);
+
+          const data = await res.json();
+          const results = data.results || [];
+
+          clearTmdbCardsInGrid(moviesGrid, "movie-card");
+
+          if (!results.length) {
+            if (moviesEmpty) moviesEmpty.style.display = "block";
+            statusMovies.textContent = `No movie results for "${q}".`;
+            return;
+          }
+
+          if (moviesEmpty) moviesEmpty.style.display = "none";
+
+          const fragment = document.createDocumentFragment();
+          results.slice(0, 30).forEach((m) => {
+            fragment.appendChild(createMovieCard(m));
+          });
+
+          moviesGrid.appendChild(fragment);
+          statusMovies.textContent = `Movie results for "${q}".`;
+        } catch (err) {
+          console.error(err);
+          statusMovies.textContent = "TMDB movie search error: " + err.message;
+        }
+      }
+
+      async function searchTv(query) {
+        const q = query.trim();
+        if (!q) {
+          await loadTrendingTv();
+          return;
+        }
+
+        if (statusTv) statusTv.textContent = `Searching TV for "${q}"…`;
+
+        try {
+          const res = await fetch(
+            `https://api.themoviedb.org/3/search/tv?api_key=${TMDB_KEY}&language=en-US&include_adult=false&page=1&query=${encodeURIComponent(
+              q
+            )}`
+          );
+          if (!res.ok) throw new Error("TMDB HTTP " + res.status);
+
+          const data = await res.json();
+          const results = data.results || [];
+
+          clearTmdbCardsInGrid(tvGrid, "tv-card");
+
+          if (!results.length) {
+            if (tvEmpty) tvEmpty.style.display = "block";
+            statusTv.textContent = `No TV results for "${q}".`;
+            return;
+          }
+
+          if (tvEmpty) tvEmpty.style.display = "none";
+
+          const fragment = document.createDocumentFragment();
+          results.slice(0, 30).forEach((s) => {
+            fragment.appendChild(createTvCard(s));
+          });
+
+          tvGrid.appendChild(fragment);
+          statusTv.textContent = `TV results for "${q}".`;
+        } catch (err) {
+          console.error(err);
+          statusTv.textContent = "TMDB TV search error: " + err.message;
+        }
+      }
+
+      // ===== INIT =====
+
+      document.addEventListener("DOMContentLoaded", () => {
+        loadTrendingMovies();
+        loadTrendingTv();
+
+        if (mediaSearch) {
+          mediaSearch.addEventListener("keyup", (e) => {
+            if (e.key === "Enter") {
+              const q = mediaSearch.value || "";
+              // A2: one search bar controls BOTH sections
+              searchMovies(q);
+              searchTv(q);
+            }
+          });
+        }
+      });
+    </script>
+  </body>
 </html>
